--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+  overflow-x: hidden;
 	line-height: 1;
   font-family: 'Poppins', sans-serif;
   min-height: 100vh;
@@ -56,7 +57,7 @@ table {
 }
 :root {
   --purple: #431571;
-  --bg: #888;
+  --bg: rgb(50, 51, 63);
   --button-gradient: linear-gradient(var(--purple), #1b1571);
 }
 a {
@@ -83,8 +84,10 @@ header {
 h1 {
   font-size: 1.75rem;
   font-weight: 600;
+  animation: slide-from-left .7s ease-in-out;
 }
-button {
+header button {
+  animation: slide-from-right .7s ease-in-out;
   background: var(--button-gradient);
   color: white;
   border: 0;
@@ -101,21 +104,22 @@ main {
   color: white;
 }
 .add-book {
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   font-weight: 300;
   border-radius: 8px;
-  font-size: 80px;
+  font-size: 60px;
   cursor: pointer;
   background: var(--button-gradient);
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: pulse .5s 2 ease-in-out;
+  animation: rotate-in .8s ease-in-out;
   transition: all .5s ease-in-out;
 }
 .add-book:hover {
   transform: scale(1.2) rotate(90deg);
+  opacity: 1;
   border-radius: 50%;
   box-shadow: 0 0 8px;
 }
@@ -126,41 +130,113 @@ main {
   bottom: 0;
   right: 0;
   left: 0;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
+  color: black;
   z-index: 1;
   opacity: 0;
-  animation: fade-in 0.4s ease-in-out forwards;
+  animation: fade-in 0.2s ease-in-out forwards;
 }
 form {
   width: 300px;
-  height: 400px;
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 10px;
-  background-color: #666;
+  min-height: 400px;
+  overflow: hidden;
+  background-color: #eee;
+  justify-content: space-between;
   border-radius: 8px;
 }
-@keyframes pulse {
+form, .inputs {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.inputs {
+  justify-content: center;
+  padding: 1rem;
+}
+input {
+  padding: 1.1rem;
+  text-align: center;
+  border-radius: 5px;
+  border: 0;
+  box-shadow: 0 0 5px #00000080;
+}
+label {
+  padding-top: .5rem;
+}
+::placeholder {
+  color: rgb(68, 68, 68);
+}
+.top-modal, .bottom-modal {
+  width: 100%;
+  text-align: center;
+}
+.top-modal {
+  padding: 1rem 0;
+  background: var(--button-gradient);
+  color: white;
+  font-size: 1.4rem;
+}
+.bottom-modal {
+  display: flex;
+}
+.bottom-modal button {
+  border: 0;
+  padding: 1rem 0;
+  font-size: 1.1rem;
+  cursor: pointer;
+  opacity: .9;
+  transition: all .5s ease-in-out;
+}
+.bottom-modal button:hover {
+  opacity: 1;
+  box-shadow: inset 0 0 15px #00000040;
+}
+.bottom-modal :first-child {
+  width: 35%;
+  background-color: rgb(160, 0, 0);
+}
+.bottom-modal :last-child {
+  width: 65%;
+  background-color: rgb(0, 160, 0);
+}
+footer p {
+  opacity: 0;
+  animation: fade-in 1s ease-in-out .3s forwards;
+}
+@keyframes rotate-in {
   0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  50% {
-    transform: scale(1.05);
+    transform: scale(.9) rotate(-45deg);
     opacity: 0;
   }
+  75% {
+    transform: scale(1.05) rotate(0);
+  }
   100% {
-    transform: scale(1);
-    opacity: 1;
+    transform: scale(1) rotate(0);
+    opacity: .9;
   }
 }
 @keyframes fade-in {
   to {
     opacity: 1;
+  }
+}
+@keyframes slide-from-left {
+  0% {
+    transform: translateX(-1000px);
+  }
+  75% {
+    transform: translateX(50px);
+  }
+}
+@keyframes slide-from-right {
+  0% {
+    transform: translateX(1000px);
+  }
+  75% {
+    transform: translateX(-50px);
   }
 }
