--- a/style.css
+++ b/style.css
@@ -56,10 +56,11 @@ table {
 }
 :root {
   --purple: #6b23b3;
-  --bg: rgb(50, 51, 63);
+  --bg: #757575;
   --button-gradient: linear-gradient(var(--purple), #1b1571);
   --red: rgb(160, 0, 0);
   --green: rgb(0, 160, 0);
+  --blue: rgb(135, 220, 241);
 }
 a {
   text-decoration: none;
@@ -107,18 +108,18 @@ main {
   color: white;
 }
 .add-book {
-  height: 75px;
-  width: 75px;
+  height: 70px;
+  width: 70px;
   font-weight: 300;
   border-radius: 8px;
-  font-size: 60px;
+  font-size: 3.5rem;
   cursor: pointer;
   background: var(--button-gradient);
   display: flex;
   align-items: center;
   justify-content: center;
   animation: rotate-in .8s ease-in-out;
-  transition: all .5s ease-in-out;
+  transition: all .4s ease-in-out;
 }
 .add-book:hover {
   transform: scale(1.2) rotate(90deg);
@@ -168,7 +169,11 @@ input {
   box-shadow: 0 0 5px #00000080;
 }
 label {
+  cursor: pointer;
   padding-top: .5rem;
+}
+input[type="checkbox"] {
+  cursor: pointer;
 }
 ::placeholder {
   color: rgb(68, 68, 68);
@@ -191,12 +196,10 @@ label {
   padding: 1rem 0;
   font-size: 1.1rem;
   cursor: pointer;
-  opacity: .9;
-  transition: all .5s ease-in-out;
+  transition: all .2s ease-in-out;
 }
 .bottom-modal button:hover {
-  opacity: 1;
-  box-shadow: inset 0 0 15px #00000040;
+  box-shadow: inset 0 0 15px #00000070;
 }
 .bottom-modal :first-child {
   width: 35%;
@@ -228,25 +231,33 @@ label {
   min-width: 200px;
   padding: 0.5rem 1rem;
   border-radius: 8px;
-  background-color: rgb(135, 220, 241);
+  background-color: var(--blue);
   box-shadow: 5px 5px 10px #00000080;
-  transition: all .4s ease-in-out;
+  transition: all .2s ease-in-out;
 }
 .book:hover {
-  transform: scale(1.03);
-  box-shadow: 6px 6px 15px #00000060;
+  transform: scale(1.01);
 }
 .book span {
   font-weight: 400;
   margin-left: .5rem;
+  margin-right: 2rem;
+}
+.book label {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+#read-book {
+  box-shadow: none;
 }
 .book img {
   width: 25px;
   cursor: pointer;
+  border-radius: 5px;
 }
 .book img:hover {
   background-color: var(--red);
-  border-radius: 5px;
+  box-shadow: 0 0 5px #000;
 }
 footer p {
   opacity: 0;
